tests/error/linear_errors/field_copy2.err
Error: Copy violation (at $FILE:13:14)
   | 
11 | @guppy
12 | def foo(s: MyStruct @owned) -> tuple[MyStruct, qubit]:
13 |     return s, s.q
   |               ^^^ Field `s.q` with non-copyable type `qubit` cannot be
   |                   returned ...
   | 
13 |     return s, s.q
   |            - since it was already returned here

Guppy compilation failed due to 1 previous error
